--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -21,12 +21,12 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <layout class="QHBoxLayout" name="GlobalLayout" stretch="1,3">
+    <layout class="QHBoxLayout" name="GlobalLayout" stretch="0,3">
      <property name="sizeConstraint">
       <enum>QLayout::SetNoConstraint</enum>
      </property>
      <item>
-      <layout class="QVBoxLayout" name="procesingControlLayout" stretch="0,0,0,0,0,0,0,0,0,0,1,0">
+      <layout class="QVBoxLayout" name="procesingControlLayout" stretch="0,0,0,0,0,0,0,0,0,1,0">
        <property name="spacing">
         <number>10</number>
        </property>
@@ -172,13 +172,13 @@
            </property>
            <property name="minimumSize">
             <size>
-             <width>50</width>
+             <width>120</width>
              <height>0</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>50</width>
+             <width>120</width>
              <height>32</height>
             </size>
            </property>
@@ -186,7 +186,7 @@
             <enum>Qt::LeftToRight</enum>
            </property>
            <property name="text">
-            <string>➕</string>
+            <string>Top up balance</string>
            </property>
            <property name="icon">
             <iconset>
@@ -207,7 +207,10 @@
         </widget>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,1,0,0,0">
+        <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0,0,1,0">
+         <property name="spacing">
+          <number>-1</number>
+         </property>
          <property name="sizeConstraint">
           <enum>QLayout::SetMinimumSize</enum>
          </property>
@@ -221,40 +224,18 @@
            </property>
            <property name="minimumSize">
             <size>
-             <width>80</width>
+             <width>60</width>
              <height>0</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>80</width>
+             <width>60</width>
              <height>16777215</height>
             </size>
            </property>
            <property name="text">
             <string>AI model:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QComboBox" name="modelCombo">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>120</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>500</width>
-             <height>16777215</height>
-            </size>
            </property>
           </widget>
          </item>
@@ -290,8 +271,14 @@
           <widget class="QLabel" name="labelWdPrice">
            <property name="minimumSize">
             <size>
-             <width>0</width>
+             <width>16</width>
              <height>0</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16</width>
+             <height>16777215</height>
             </size>
            </property>
            <property name="toolTip">
@@ -302,6 +289,31 @@
            </property>
            <property name="alignment">
             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="modelCombo">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>120</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>500</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="toolTipDuration">
+            <number>-1</number>
            </property>
           </widget>
          </item>
@@ -325,6 +337,9 @@
              <height>32</height>
             </size>
            </property>
+           <property name="toolTipDuration">
+            <number>-1</number>
+           </property>
            <property name="text">
             <string/>
            </property>
@@ -346,7 +361,7 @@
         </layout>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="0,1,0,0">
+        <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="0,1,0">
          <property name="sizeConstraint">
           <enum>QLayout::SetMinimumSize</enum>
          </property>
@@ -360,13 +375,13 @@
            </property>
            <property name="minimumSize">
             <size>
-             <width>80</width>
+             <width>111</width>
              <height>0</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>80</width>
+             <width>111</width>
              <height>16777215</height>
             </size>
            </property>
@@ -404,34 +419,6 @@
              <string>postgresraster</string>
              <string>grassraster</string>
             </stringlist>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="labelCoins_2">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>16</width>
-             <height>16</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>16</width>
-             <height>16</height>
-            </size>
-           </property>
-           <property name="toolTip">
-            <string>This data provider is paid</string>
-           </property>
-           <property name="text">
-            <string>CC</string>
            </property>
           </widget>
          </item>
@@ -504,47 +491,55 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="rateProcessingLabel">
-         <property name="text">
-          <string>Rate processing:</string>
-         </property>
-        </widget>
-       </item>
-       <item>
         <layout class="QHBoxLayout" name="horizontalLayout_8">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
          <item>
-          <widget class="QRadioButton" name="processingRating_1">
+          <widget class="QLabel" name="rateProcessingLabel">
            <property name="text">
-            <string>1</string>
+            <string>Rate processing:</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QRadioButton" name="processingRating_2">
-           <property name="text">
-            <string>2</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QRadioButton" name="processingRating_3">
-           <property name="text">
-            <string>3</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QRadioButton" name="processingRating_4">
-           <property name="text">
-            <string>4</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QRadioButton" name="processingRating_5">
-           <property name="text">
-            <string>5</string>
-           </property>
+          <widget class="QComboBox" name="ratingComboBox">
+           <item>
+            <property name="text">
+             <string>...</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>⭐⭐⭐⭐⭐</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>⭐⭐⭐⭐</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>⭐⭐⭐</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>⭐⭐</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>⭐</string>
+            </property>
+           </item>
           </widget>
          </item>
         </layout>
